@@ -93,7 +93,7 @@ buildarchtranslate: osfmach3_ppc: ppc
 #############################################################
 # Architecture compatibility
 
-arch_compat: alpha: axp
+arch_compat: alpha: axp noarch
 
 arch_compat: i986: i886
 arch_compat: i886: i786
@@ -101,6 +101,7 @@ arch_compat: i786: i686
 arch_compat: i686: i586
 arch_compat: i586: i486
 arch_compat: i486: i386
+arch_compat: i386: noarch
 
 arch_compat: osfmach3_i986: i986 osfmach3_i886
 arch_compat: osfmach3_i886: i886 osfmach3_i786
@@ -113,3 +114,6 @@ arch_compat: osfmach3_i386: i486
 arch_compat: osfmach3_ppc: ppc
 
 arch_compat: usparc: sparc
+arch_compat: sparc: noarch
+
+arch_compat: ppc: noarch
